switch the link of my github profile

--- a/.vscode/index.html
+++ b/.vscode/index.html
@@ -42,7 +42,7 @@
             </li>
 
             <li>
-              <a href="https://github.com/bankai1g" target="_blank"
+              <a href="https://github.com/allanalvesdt" target="_blank"
                 >Ver meu portfólio</a
               >
             </li>
@@ -59,7 +59,7 @@
           /></a>
         </div>
         <div id="social-links">
-          <a href="https://github.com/bankai1g" target="_blank"
+          <a href="https://github.com/allanalvesdt" target="_blank"
             ><ion-icon name="logo-github"
           /></a>
         </div>
